# Sandbox

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
includes/: Material.hpp  Menu.hpp  Simulator.hpp  button.h  menu.h  simulation.h  utils.h  utils.hpp
includes/materials/: Acid.hpp  Air.hpp  Ash.hpp  Coal.hpp  Gas.hpp  Ice.hpp  Lava.hpp  Oil.hpp  Salt.hpp  Sand.hpp  Snow.hpp  Stone.hpp  Vapor.hpp  Water.hpp  Wood.hpp  acid.h  air.h  lava.h  oil.h  salt.h  sand.h  snow.h  stone.h  vapor.h
libraries/ImGui/: CMakeLists.txt  imconfig.h
libraries/SFML/: readme.md
sources/: Material.cpp  Menu.cpp  Simulator.cpp  button.cpp  main.cpp  material2.cpp  menu.cpp  simulation.cpp  utils.cpp
sources/materials/: Acid.cpp  Air.cpp  Ash.cpp  Coal.cpp  Gas.cpp  Ice.cpp  Lava.cpp  Oil.cpp  Salt.cpp  Sand.cpp  Snow.cpp  Stone.cpp  Vapor.cpp  Water.cpp  Wood.cpp  ash2.cpp  coal.cpp  ice.cpp  oil.cpp  salt2.cpp  sand.cpp  snow2.cpp  wood.cpp
